fixed font edges touching edges on mobile

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -48,7 +48,7 @@ header {
     }
 
     @media only screen and (max-width: 600px) {
-      h3 {
+      h4 {
         padding-bottom: 15px;
       }
 
